--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     font-family: inter;
 }
 body{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     background-color: hsl(0, 0%, 8%);
     box-sizing: border-box;;
 }
@@ -14,7 +14,8 @@ body{
     flex-direction: column;
     justify-content: center;
     height: auto;
-    width: 450px;
+    width: 30%;
+    max-width: 450px;
     margin-top: 7%;
     margin-left: 35%;
     border-radius: 10px;
@@ -62,12 +63,9 @@ p{
     text-decoration: none;
     margin: 10px;
     border-radius: 10px;
+    color: white;
 }
 
-.container .links li a{
-    color: white;
-    text-decoration: none;
-}
 .container .links li:hover a{
     cursor: pointer;
     caret-color: black;
@@ -78,4 +76,39 @@ p{
     cursor: pointer;
     background-color: hsl(75, 94%, 57%);
     color: black;
+}
+@media (min-width : 600px) and (max-width: 768px) {
+
+    h5{
+        font-size: 11px;
+    }
+    p{
+        font-size: 11px;
+    }
+    .container .links{
+        padding: 10%;
+    }
+    .container .links li a {
+        width: 85%;
+        font-size: 11px;
+    }
+}
+@media (max-width:600px){
+    .container{
+        width: 50%;
+        margin-left: 25%;
+    }
+    h5{
+        font-size: 9px;
+    }
+    p{
+        font-size: 9px;
+    }
+    .container .links {
+        padding: 5%;
+    }
+    .container .links li a{
+        font-size: 9px;
+    }
+
 }
